// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomFieldName /> should render custom field name 1`] = `
<span>
  
  Field 
  Input field
</span>
`;

exports[`<Preview /> should multiple actions preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData addTagWrapper"
  >
    <strong
      class="text-muted mr-2"
    >
      Add tags:
    </strong>
    <div
      class="badge tag"
      style="color: rgb(0, 0, 0); background-color: rgb(245, 141, 134);"
    >
      refund
    </div>
    <div
      class="badge tag"
      style="color: rgb(0, 0, 0); background-color: rgb(245, 141, 134);"
    >
      billing
    </div>
    <div
      class="badge tag"
      style="color: rgb(0, 0, 0); background-color: rgb(245, 141, 134);"
    >
      refund accepted
    </div>
  </div>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2 align-middle"
    >
      Send internal note:
    </strong>
    <span
      class="material-icons mr-2 icon internalNoteIcon"
    >
      note
    </span>
    <span
      class="internalNote"
    >
      Add internal note
    </span>
  </div>
</div>
`;

exports[`<Preview /> should render backend action preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2 align-middle"
    >
      Send internal note:
    </strong>
    <span
      class="material-icons mr-2 icon internalNoteIcon"
    >
      note
    </span>
    <span
      class="internalNote"
    >
      Add internal note
    </span>
  </div>
</div>
`;

exports[`<Preview /> should render setCustomFieldValue actions preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2"
    >
      <span>
        
        Field 
        Input field
      </span>
      :
    </strong>
    <b
      class="integrationAction"
    >
      Custom field value
    </b>
  </div>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2"
    >
      <span>
        
        Field 
        Input field
      </span>
      :
    </strong>
    <b
      class="integrationAction"
    >
      Custom field value
    </b>
  </div>
</div>
`;

exports[`<Preview /> should render simple action preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData addTagWrapper"
  >
    <strong
      class="text-muted mr-2"
    >
      Add tags:
    </strong>
    <div
      class="badge tag"
      style="color: rgb(0, 0, 0); background-color: rgb(245, 141, 134);"
    >
      refund
    </div>
    <div
      class="badge tag"
      style="color: rgb(0, 0, 0); background-color: rgb(245, 141, 134);"
    >
      billing
    </div>
    <div
      class="badge tag"
      style="color: rgb(0, 0, 0); background-color: rgb(245, 141, 134);"
    >
      refund accepted
    </div>
  </div>
</div>
`;
